--- a/demo.html
+++ b/demo.html
@@ -22,10 +22,12 @@
   <p>Le document traite de <span id="about"></span>.</p>
   <p>Il contient <span id="content"></span> <span id="children"></span>.</p>
 
+  <hr>
+
   <h2>Expressions XPath</h2>
   <textarea id="xpath_in" rows="1"></textarea>
   <h2>Résultat</h2>
-  <textarea id="xpath_out" rows="1"></textarea>
+  <span id="xpath_out"></span>
   <script src="xpath.js"></script>
 </body>
 
